# qtdemo

./: CMakeLists.txt  debug-minimal.bat
src/: CMakeLists.txt  main.cpp  testdialog.cpp  testdialog.h  testdialog.ui
src/gv/: curvescalaritem.cpp  curvescalaritem.h  customgraphicsscene.cpp  customgraphicsscene.h  customgraphicsview.cpp  customgraphicsview.h  customlineedit.cpp  customlineedit.h  customrectitem.cpp  customrectitem.h  uicommon.h
